Fixes circular corner profile image and jump to edit form on click edit listing

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -69,12 +69,12 @@ a {
   font-size: 0.9rem !important;
   align-items: center !important;
 }
+
 .bi:hover {
   color: var(--color-white) !important;
-  // transform: scale(1.03) !important;
-  // font-weight: 700 !important;
   cursor: pointer;
 }
+
 header {
   .bi:hover {
     color: var(--color-primary) !important;
@@ -82,9 +82,19 @@ header {
   }
 }
 
-.header-profile-image {
-  max-height: 60px;
-  max-width: 60px;
+header {
+  .header-profile-image {
+    max-height: 60px;
+    max-width: 60px;
+  }
+  .profile-pic {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    max-width: 60px;
+    max-height: 60px;
+    border-radius: 50%;
+  }
 }
 
 .max-width-1200 {
@@ -104,7 +114,7 @@ header {
 .categories-container {
   height: 80px;
   button {
-    height: 40px;
+    height: 35px;
   }
 }
 @media screen and (min-width: 548px) {
